Fixing background image zoom-in on smaller devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -141,15 +141,9 @@ ion-icon{
 }
 
 @media all and (max-width:985px){
-  body { 
-    background: url(../images/bg6.jpeg) no-repeat center center; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    font-family: 'Kodchasan', sans-serif;
-    color:white;
-  }
+  background-size:100%;
+  width:100%;
+  
   .container-fluid {
     padding-right:0;
     padding-left:0;
